# peakbagger-cli

./: .gitattributes  .gitignore  .gitmessage  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-setup.md  .releaserc.json  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  coverage.json  package.json  pyproject.toml
.github/: GITHUB_APP_SETUP.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  release.yml  scorecard.yml  validate-pr-title.yml
docs/plans/: 2025-10-21-ascent-report-command-design.md
examples/: README.md  batch_peaks.py  export_csv.py  filter_by_elevation.py
peakbagger/: __init__.py  api.py  cli.py  client.py  formatters.py  logging_config.py  models.py  scraper.py  statistics.py
scripts/: setup-git-hooks.sh  update-version.py
tests/: README.md  conftest.py  test_api.py  test_ascent_commands.py  test_cli.py  test_cli_errors.py  test_client.py  test_dynamic_ascents_parser.py  test_formatters_edge_cases.py  test_scraper_errors.py  test_statistics.py
tests/cassettes/: test_ascent_show_command_json.yaml  test_ascent_show_command_text.yaml  test_ascent_show_detects_gpx_and_trip_report.yaml  test_ascents_1798.yaml  test_ascents_1798_json.yaml  test_ascents_denali_271.yaml  test_ascents_denali_271_json.yaml  test_ascents_mount_rainier_2296.yaml  test_ascents_mount_rainier_2296_json.yaml  test_ascents_mount_si_2087_nested_tables.yaml  test_ascents_mount_si_2087_nested_tables_json.yaml  test_ascents_mount_si_9779.yaml  test_ascents_mount_si_9779_json.yaml  test_ascents_pratt_mountain_2117.yaml  test_ascents_pratt_mountain_2117_json.yaml  test_search_mount_rainier.yaml  test_search_mount_rainier_json.yaml  test_show_peak_2296.yaml  test_show_peak_2296_json.yaml  test_stats_1798.yaml  test_stats_1798_json.yaml
